# newsdesk-mvp

./: .gitignore  AGENTS.md  CLAUDE.md  NOTICE.md  README.md  frontend-ui-review.md  real-sources-v1.md  real-sources-v2.md  review-2026-06-23.md
backend/: .gitignore  README.md  pyproject.toml  start_backend.bat
backend/app/: config.py  curated_sources.py  database.py  main.py  migrations.py  models.py  schemas.py  seed.py
backend/app/routers/: articles.py  briefing.py  channels.py  fetch_logs.py  source_health.py  sources.py  stories.py  system.py  watch_rules.py
backend/app/services/: ai_summary.py  briefing.py  content_cleaner.py  fetcher.py  maintenance.py  matcher.py  normalizer.py  scheduler.py  story_diff.py  story_engine.py  story_serializer.py
backend/reports/: 20260623-012159-long-report.md  20260623-012200-db-maintenance.md  20260623-031925-db-maintenance.md  20260623-032017-db-maintenance.md  20260623-032018-db-maintenance.md  20260623-032146-fetch-all-report.md  20260623-test-story-quality-review.md  test-story-quality-review.md
backend/scripts/: import_curated_sources.py  verify_results.json  verify_sources.py
backend/tests/: conftest.py  test_ai_providers.py  test_ai_summary.py  test_articles.py  test_briefing.py  test_channels.py  test_content_cleaner.py  test_fetch_logs.py  test_fetcher.py  test_maintenance.py  test_migrations.py  test_models.py  test_normalizer.py  test_scheduler.py  test_seed.py  test_source_health.py  test_sources.py  test_stories.py  test_story_diff.py  test_story_split_merge.py  test_system.py  test_watch_rules.py
(+109 files in other folders)
