[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsdesk-mvp"
version = "0.1.0"
description = "Personal news intelligence dashboard MVP"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "rapidfuzz>=3.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
build = ["pyinstaller>=6.0"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
